minor cleanup - log is final, dispatch tabs, etc
git-svn-id: https://svn.apache.org/repos/asf/cocoon/trunk@562804 13f79535-47bb-0310-9956-ffa450edef68